--- a/index.html
+++ b/index.html
@@ -5,12 +5,36 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title></title>
+    <link rel="stylesheet" href="css/style.css">
+	<title>Illesteva | Made in Italy.</title>
 	</head>
-
 	<body>
+		<!--Navigation-->
+		<nav>
+			<div id="navContainer">
+				<ul>
+					<li><a href="#">Collaborations</a></li>
+					<li><a href="#">Trending</a></li><br />
+					<li><a href="#">Mens</a></li>
+					<li><a href="#">Womens</a></li>
+					<li><a href="#">Umbrellas</a></li>
+					<li><a href="#">Bags</a></li>
+				</ul>
+			</div>
+		</nav>
+
+		<div id="background">
+			<img src="img/illestevaBG.jpg" />
+			<div id="container">
+			<img src="img/illestevaBG.jpg" />
+			</div>
+		</div>
+
+		<footer>
+			
+		</footer>
 
 	</body>
+
 
 </html>
