--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
 	<title>Illesteva | Made in Italy.</title>
 	</head>
@@ -23,15 +24,37 @@
 			</div>
 		</nav>
 
-		<div id="background">
-			<img src="img/illestevaBG.jpg" />
-			<div id="container">
-			<img src="img/illestevaBG.jpg" />
+		<div id="customerInfoContainer">
+			<h3>SIGN IN</h3>
+			<h3>MY PROFILE</h3>
+			<h3>YOUR CART</h3>
+		</div>
+		<div id="pageContainer">
+			<div id="background">
+				<img src="img/illestevaBG.jpg" />
+			</div>
+			<!--
+			<div id="background" class="one">
+				<div class="container grid calltoaction">
+					<div class="col-4">
+						<h4>Illesteva Leonards</h4>
+						<button>BUY THESE GLASSES</button>
+					</div>
+				</div>
+			</div>
+		-->
+			<div id="background">
+				<img src="img/illestevaBG.jpg" />
 			</div>
 		</div>
 
+
 		<footer>
-			
+			<ul>
+				<li>INFO 1</li>
+				<li>INFO 2</li>
+				<li>INFO 3</li>
+			</ul>
 		</footer>
 
 	</body>
