--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
 	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
-		<!--Navigation-->
-		<nav>
+		<!--borders-->
+		<div class="leftBorder"></div>
+		<div class="rightBorder"></div>
+		<div class="bottomBorder"></div>
+		<!--Top Navigation w/ Bag-->
+		<nav id="customerInfoNav">
+			<div id="logo">
+				<img src="img/illestevaLogo.jpg" />
+			</div>
+			<ul class="customerInfoContainer">
+				<li>SIGN IN</li>
+				<li>CONTACT</li>
+				<li><i class="fa fa-shopping-cart"></i></li>
+			</ul>
+		</nav>
+
+		<!--Product Navigation-->
+		<nav id="productNav">
 			<div id="navContainer">
 				<ul>
 					<li><a href="#">Collaborations</a></li>
@@ -24,38 +41,12 @@
 			</div>
 		</nav>
 
-		<div id="customerInfoContainer">
-			<h3>SIGN IN</h3>
-			<h3>MY PROFILE</h3>
-			<h3>YOUR CART</h3>
-		</div>
 		<div id="pageContainer">
 			<div id="background">
 				<img src="img/illestevaBG.jpg" />
 			</div>
-			<!--
-			<div id="background" class="one">
-				<div class="container grid calltoaction">
-					<div class="col-4">
-						<h4>Illesteva Leonards</h4>
-						<button>BUY THESE GLASSES</button>
-					</div>
-				</div>
-			</div>
-		-->
-			<div id="background">
-				<img src="img/illestevaBG.jpg" />
-			</div>
 		</div>
-
-
-		<footer>
-			<ul>
-				<li>INFO 1</li>
-				<li>INFO 2</li>
-				<li>INFO 3</li>
-			</ul>
-		</footer>
+		
 
 	</body>
 
