changing background image

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 		<div id="pageContainer">
 			<div id="background">
-				<img src="img/illestevaBG.jpg" />
+				<img src="img/illestevaBackground.jpg" />
 			</div>
 		</div>
 		
