adding mens style page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<ul>
 					<li><a href="#">Collaborations</a></li>
 					<li><a href="#">Trending</a></li><br />
-					<li><a href="#">Mens</a></li>
+					<li><a href="mensStyle.html">Mens</a></li>
 					<li><a href="#">Womens</a></li>
 					<li><a href="#">Umbrellas</a></li>
 					<li><a href="#">Bags</a></li>
@@ -44,6 +44,11 @@
 		<div id="pageContainer">
 			<div id="background">
 				<img src="img/illestevaBackground.jpg" />
+			</div>
+		</div>
+		<div id="pageContainer">
+			<div id="background">
+				<img src="img/illestevaBG.jpg" />
 			</div>
 		</div>
 		
