adding more products tolisting

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -8,7 +8,78 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mensProductList.css">
+
 	<title>Illesteva | Mens Style.</title>
 	</head>
 	<body>
+            <!--borders-->
+        <div class="leftBorder"></div>
+        <div class="rightBorder"></div>
+        <div class="bottomBorder"></div>
+        <!--Top Navigation w/ Bag-->
+        <nav id="customerInfoNav">
+            <div id="logo">
+                <img src="img/illestevaLogo.jpg" />
+            </div>
+            <ul class="customerInfoContainer">
+                <li>SIGN IN</li>
+                <li>CONTACT</li>
+                <li><i class="fa fa-shopping-cart"></i></li>
+            </ul>
+        </nav>
+
+        <!--Product Navigation-->
+        <nav id="productNav">
+            <div id="navContainer">
+                <ul>
+                    <li><a href="#">Collaborations</a></li>
+                    <li><a href="#">Trending</a></li><br />
+                    <li><a href="mensStyle.html">Mens</a></li>
+                    <li><a href="#">Womens</a></li>
+                    <li><a href="#">Umbrellas</a></li>
+                    <li><a href="#">Bags</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!--Recommended Styles-->
+        <div class="container glassStyles">
+            <div class="row">
+                <a href="">
+                <div class="col-4of12" id="Leonards">
+                    <h1>New Styles</h1>
+                </div>
+                </a>
+                <a href="">
+                <div class="col-4of12">
+                    <img src="img/Milan2.jpg" />
+                </div>
+                </a>
+                 <a href="">
+                <div class="col-4of12">
+                    <img src="img/Rectangles2.jpg" />
+                </div>
+                </a>
+            </div>
+        </div>
+        <!--Glass Listings-->
+        <div class="container glassStyles">
+            <div class="row">
+                <a href="">
+                <div class="col-4of12" id="Leonards">
+                    <h1>New Styles</h1>
+                </div>
+                </a>
+                <a href="">
+                <div class="col-4of12">
+                    <img src="img/Milan2.jpg" />
+                </div>
+                </a>
+                 <a href="">
+                <div class="col-4of12">
+                    <img src="img/Rectangles2.jpg" />
+                </div>
+                </a>
+            </div>
+        </div>
     </body>
