adding more products

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -63,21 +63,21 @@
             </div>
         </div>
         <!--Glass Listings-->
-        <div class="container glassStyles">
+        <div class="container glassListing">
             <div class="row">
                 <a href="">
-                <div class="col-4of12" id="Leonards">
-                    <h1>New Styles</h1>
+                <div class="col-4of12">
+                    <img src="img/Leonard.jpg" />
                 </div>
                 </a>
                 <a href="">
                 <div class="col-4of12">
-                    <img src="img/Milan2.jpg" />
+                    <img src="img/Milan.jpg" />
                 </div>
                 </a>
                  <a href="">
                 <div class="col-4of12">
-                    <img src="img/Rectangles2.jpg" />
+                    <img src="img/Rectangles.jpg" />
                 </div>
                 </a>
             </div>
