--- a/mensStyle.html
+++ b/mensStyle.html
@@ -68,16 +68,38 @@
                 <a href="">
                 <div class="col-4of12">
                     <img src="img/Leonard.jpg" />
+                    <h3>Leonard Classic</h3>
+                    <h4>$500.00</h4>
                 </div>
                 </a>
                 <a href="">
                 <div class="col-4of12">
                     <img src="img/Milan.jpg" />
+                    <h3>Milan Lounge</h3>
+                    <h4>$500.00</h4>
                 </div>
                 </a>
                  <a href="">
                 <div class="col-4of12">
                     <img src="img/Rectangles.jpg" />
+                    <h3>Rectangles</h3>
+                    <h4>$500.00</h4>
+                </div>
+                </a>
+            </div>
+            <div class="row">
+                <a href="">
+                <div class="col-4of12">
+                    <img src="img/Leonard.jpg" />
+                    <h1>Leonard Classic</h1>
+                    <h4>$500.00</h4>
+                </div>
+                </a>
+                <a href="">
+                <div class="col-4of12">
+                    <img src="img/Milan.jpg" />
+                    <h1>Milan Lounge</h1>
+                    <h4>$500.00</h4>
                 </div>
                 </a>
             </div>
