--- a/index.html
+++ b/index.html
@@ -51,7 +51,26 @@
 				<img src="img/illestevaBG.jpg" />
 			</div>
 		</div>
-		
+
+	<footer class="footer">
+		<div class="row">
+			<nav class="nav">
+				<ul id="footer-menu">
+					<li><a href="http://press.acnestudios.com">Press</a></li>
+					<li><a href="http://www.acnestudios.com/about">About</a></li>
+					<!--			
+					<li><a href="https://www.facebook.com/pages/Illesteva/190417927639701" target="_blank" class="icon icon-facebook"></a></li>
+					<li><a href="https://twitter.com/illesteva" target="_blank" class="icon icon-twitter"></a></li>
+					<li><a href="https://instagram.com/illesteva" target="_blank" class="icon icon-instagram"></a></li>-->
+				</ul>
+				
+				<div id="footer-info" class="nav">
+					© 2015 Illesteva&nbsp;&nbsp;All rights reserved
+				</div>		
+			</nav>
+			
+		</div>
+	</footer>
 
 	</body>
 
