adding fixed nav bar

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -23,7 +23,12 @@
             <div id="logo">
                 <img src="img/illestevaLogo.jpg" />
             </div>
-        </a>
+            </a>
+            <div id="fixedGlassNav">
+                <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
+                <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
+                <div class="fixedGlassContainer"><img src="img/Leonard.jpg" /></div>
+            </div>
             <ul class="customerInfoContainer">
                 <li>SIGN IN</li>
                 <li>CONTACT</li>
@@ -47,63 +52,65 @@
         <!--Recommended Styles-->
         <div class="container glassStyles">
             <div class="row">
-                <a href="">
-                <div class="col-4of12" id="Leonards">
-                    <h1>New Styles</h1>
+                <div class="col-4of12 styleContainers" id="Leonards">
+                    <img src="img/Leonard2.jpg" />
+                    <div class="seeMoreBtn"><h4>SEE MORE</h4></div>
                 </div>
-                </a>
                 <a href="">
-                <div class="col-4of12">
+                <div class="col-4of12 styleContainers" id="Milan">
                     <img src="img/Milan2.jpg" />
+                    <div class="seeMoreBtn"><h4>SEE MORE</h4></div>
                 </div>
                 </a>
                  <a href="">
-                <div class="col-4of12">
-                    <img src="img/Rectangles2.jpg" />
+                <div class="col-4of12 styleContainer" id="Wavers">
+                   <img src="img/Rectangles2.jpg" />
+
                 </div>
                 </a>
             </div>
         </div>
         <!--Glass Listings-->
         <div class="container glassListing">
-            <div class="row">
-                
-                <div class="col-4of12" id="leonards">
-                    <img src="img/Leonard.jpg" />
-                    <h3>Leonard Classic</h3>
-                    <h4>$500.00</h4>
+            <section class="Leonards">
+                <div class="row">
+                    <div class="col-4of12" id="leonards">
+                        <img src="img/Leonard.jpg" />
+                        <h3>Leonard Classic</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/Milan.jpg" />
+                        <h3>Milan Lounge</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    </a>
+                     <a href="">
+                    <div class="col-4of12">
+                        <img src="img/Rectangles.jpg" />
+                        <h3>Rectangles</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    </a>
                 </div>
-                <a href="">
-                <div class="col-4of12">
-                    <img src="img/Milan.jpg" />
-                    <h3>Milan Lounge</h3>
-                    <h4>$500.00</h4>
+                <div class="row">
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/Leonard.jpg" />
+                        <h3>Leonard Classic</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    </a>
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/Milan.jpg" />
+                        <h3>Milan Lounge</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    </a>
                 </div>
-                </a>
-                 <a href="">
-                <div class="col-4of12">
-                    <img src="img/Rectangles.jpg" />
-                    <h3>Rectangles</h3>
-                    <h4>$500.00</h4>
-                </div>
-                </a>
-            </div>
-            <div class="row">
-                <a href="">
-                <div class="col-4of12">
-                    <img src="img/Leonard.jpg" />
-                    <h3>Leonard Classic</h3>
-                    <h4>$500.00</h4>
-                </div>
-                </a>
-                <a href="">
-                <div class="col-4of12">
-                    <img src="img/Milan.jpg" />
-                    <h3>Milan Lounge</h3>
-                    <h4>$500.00</h4>
-                </div>
-                </a>
-            </div>
+            </section>
         </div>
 
         <!--Modal-->
