fixing shopping cart

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -32,7 +32,7 @@
             <ul class="customerInfoContainer">
                 <li>SIGN IN</li>
                 <li>CONTACT</li>
-                <li><i class="fa fa-shopping-cart"></i></li>
+                <li id="bagIcon"><i class="fa fa-shopping-cart"></i></li>
             </ul>
         </nav>
 
@@ -49,6 +49,20 @@
                 </ul>
             </div>
         </nav>
+
+        <!--Shopping Bag-->
+        <div id="shoppingBag">
+            <div id="bagContainer">
+                <div class="itemContainer">
+                   <img src="img/Milan.jpg" />
+                   <div>
+                    <h4>Leonards</h4>
+                    <h5>500.00</h5>
+                   </div>
+                   <span>-</span>
+                </div>
+            </div>
+        </div>
         <!--Recommended Styles-->
         <div class="container glassStyles">
             <div class="row">
@@ -142,8 +156,7 @@
                                 <h6>$500.000</h6>
                             </div>
                         </div>
-
-                    </div>
+                  </div>
             </div>
         </div>
         <footer class="footer">
