fixing the shopping cart

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -51,16 +51,23 @@
         </nav>
 
         <!--Shopping Bag-->
-        <div id="shoppingBag">
-            <div id="bagContainer">
-                <div class="itemContainer">
-                   <img src="img/Milan.jpg" />
-                   <div>
-                    <h4>Leonards</h4>
-                    <h5>500.00</h5>
-                   </div>
-                   <span>-</span>
+        <div id="bagBG">
+            <div id="shoppingBag">
+                <div id="bagContainer">
+                    <div class="itemContainer">
+                       <img src="img/Milan.jpg" />
+                       <div id="priceContainer">
+                            <div id="bagGlassPrice">
+                            <h4>Leonards</h4>
+                            <h5>500.00</h5>
+                            </div>
+                            <span id="quantity">1</span>
+                            <span id="addRemoveIcon">+-</span>
+                       </div>
+                    </div>
                 </div>
+                <div id="checkOut"><h1>CHECK OUT</h1></div>
+                  <div class="close">X</div>
             </div>
         </div>
         <!--Recommended Styles-->
@@ -133,6 +140,7 @@
                     <div id="rightContent">
                         <img src = "img/illestevaBackground.jpg"alt="man with sunglasses">
                     </div>
+                    <div class="close">X</div>
 
                     <div id="leftContent">
                          <!--ACTUAL CONTENT ON TOP-->
