mainly fixing modal again

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<img src="img/illestevaBG.jpg" />
 			</div>
 		</div>
-
+<!--FOOTER STARTS-->
 	<footer class="footer">
 		<div class="row">
 			<nav class="nav">
@@ -178,8 +178,12 @@
 			
 		</div>
 	</footer>
+
+	<!--FOOTER ENDS-->
 	<script src="js/jquery.js"></script>
     <script src="js/drop-downs.js"></script>
+     <script src="js/productListingModal.js"></script>
+     <script src="js/fixedNav.js"></script>
 
 	</body>
 
