adding animation to modal box

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -190,11 +190,15 @@
                                 <h5>$500.000</h5>
                                 <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
                             </div>
-                            <div id="addBtn"><h3>ADD TO BAD</h3></div>
+                            <div id="addBtn"><h3>ADD TO BAG</h3></div>
                         </div>
                   </div>
             </div>
-            <div id="detailProductNav"></div>
+            <div id="detailProductNav">
+                <div class="iconNav">
+                    <i class="fa fa-search-plus fa-lg"></i></div>
+                <div class="iconNav" id="comments"><i class="fa fa-comments fa-lg"></i></div>
+            </div>
         </div>
        <!--FOOTER STARTS-->
     <footer class="footer">
