--- a/about.html
+++ b/about.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/about.css">
 	<title>Illesteva | Made in Italy.</title>
 	</head>
-	<body>
-		<div class="m-scene" id="main"><!--LEVONA add for possible sliding animation to next page when clicked-->
+		<body>
+		<div class="m-scene" id="main"><!--LEVONA-->
+		
 		<!--borders-->
 		<div class="leftBorder"></div>
 		<div class="rightBorder"></div>
@@ -19,7 +21,7 @@
 		<!--Top Navigation w/ Bag-->
 		<nav id="customerInfoNav">
 			<div id="logo">
-				<a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a>
+				<a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a><!--changed to going back to homepage-->
 			</div>
 			<ul class="customerInfoContainer">
 				<li>SIGN IN</li>
@@ -31,7 +33,7 @@
 		<!--Top Navigation w/ Bag-->
 		<nav id="customerInfoNav">
 			<div id="logo">
-				<a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a>
+				<a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a><!--changed to going back to homepage-->
 			</div>
 			<ul class="customerInfoContainer">
 				<li><div class="contact-bg dd-toggle">SIGN IN</div>
@@ -134,35 +136,42 @@
 
 			</ul>
 		</nav>
-
-		<!--Product Navigation-->
-		<nav id="productNav">
-			<div id="navContainer">
-				<ul>
-					<li><a href="#">Collaborations</a></li>
-					<li><a href="#">Trending</a></li><br />
-					<li><a href="mensStyle.html">Mens</a></li>
-					<li><a href="#">Womens</a></li>
-					<li><a href="#">Umbrellas</a></li>
-					<li><a href="#">Bags</a></li>
-				</ul>
+	<div class="m-right-panel m-page scene_element scene_element--fadeinright"><!--LEVONA-->
+		<div class="section-about">
+		<div class="pageContainer">
+		<!--About Image on left-->
+			<div class="aboutImage">
+				<div class="about-image-wrapper">
+					<img class="about1" src="img/aboutBW.jpg" alt="4 tiled long blonde hair model posing with sunglasses making faces">
+					<img class="about2" src="img/about2.jpg" alt="4 tiled long blonde hair model posing with sunglasses making faces">
+				</div>   
 			</div>
-		</nav>
+		<!--About Text on Right-->
 
-		<div class="m-right-panel m-page scene_element scene_element--fadeinright"><!--LEVONA add for possible sliding animation to next page when clicked-->
-			<div class="pageContainer">	<!--changed to class or else error-->
-				<div class="background">
-					<img src="img/illestevaBackground.jpg" ="woman  wearing white dress and black and white striped sunglasses posing and looking down to the right" />
+			<div class="aboutText">
+				<div class="about-text-wrapper">
+					<h1 class="aboutTitle">About Us</h1>
+					<div class="user-content">
+						<p>Founded in 2010, ILLESTEVA glasses are handmade in France and Italy, in concert with the world's leading manufactuers of luxury eyewear.</p>
+						<p class="AboutText">ILLESTEVA combines classic styles with contemporary Downtown New York City aesthetics, using materials like acetate and titanium with the design of each from.</p>
+						<p class="AboutText">ILLESTEVA has featured collaborative efforts with Jourdan Dunn, Lou Reed, Zac Posen, House of Waris, Band of Outsiders, and Dasha Zhukova. Most recently, ILLESTEVA has launched a line of hand-finished leather goods and umbrellas. ILLESTEVA backpacks and handbags are made with supple grained leather, combining natural, premium materials with urban functionality.</p>
+						<p class="AboutText">Celebrity fans include Beyonce, Rihanna, Lady Gaga, Katy Perry, Daniel Craig, Sienna Miller, Solange Knowles, Lena Dunham, Alexa Chung, Elton John, and Cara Delevingne.</p>
+					</div>   
 				</div>
 			</div>
-			<div class="pageContainer">
-				<div class="background">
-					<img src="img/illestevaBG.jpg" alt="man looking to the left wearing gray blazer, black tunic and patterned sunglasses with green lense" />
+		
+			<!--About Text on Right-->
+
+			<div class="aboutText">
+				<div class="about-text-wrapper">
+					<h1 class="aboutTitle">Where To Find Us</h1>
+					<img class="map" src="img/Flagship-Page-31.jpg" alt="map of flagship store"> 
 				</div>
 			</div>
-		</div><!--LEVONA-->
-
-<!--FOOTER STARTS-->
+		</div>
+		</div>	
+	</div><!--LEVONA-->
+		
 	<footer class="footer">
 		<div class="row">
 			<nav class="nav">
@@ -182,17 +191,14 @@
 			
 		</div>
 	</footer>
-
-	<!--FOOTER ENDS-->
-</div><!--LEVONA End whole div wrap-->
+	
+	</div><!--levona-->
+	
 	<script src="js/jquery.js"></script>
     <script src="js/drop-downs.js"></script>
-     <script src="js/productListingModal.js"></script>
-     <script src="js/fixedNav.js"></script>
-	 
 	<script src="js/prefixfree.min.js"></script> <!--Levona added for animation>-->
 	<script src="js/animatingpage.js"></script> <!--Levona added for animation>-->
-	<script src="js/jquery.smoothState.js.js"></script> <!--Levona added for animation>-->
+	<script src="js/jquery.smoothState.js"></script> <!--Levona added for animation>-->
 
 	</body>
 
