--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
+    <!--animates the tab menus-->
+    <link rel="stylesheet" href="css/animate.css">
 	<title>Illesteva | Made in Italy.</title>
 	</head>
 	<body>
@@ -31,13 +33,13 @@
 		<!--Top Navigation w/ Bag-->
 		<nav id="customerInfoNav">
 			<div id="logo">
-				<a href="index.html"><img src="img/illestevaLogo.jpg" alt="illesteva logo"/></a>
+				<img src="img/illestevaLogo.jpg" alt="illesteva Logo"/>
 			</div>
 			<ul class="customerInfoContainer">
-				<li><div class="contact-bg dd-toggle">SIGN IN</div>
+				<li><a class="contact-bg dd-toggle">SIGN IN</a>
 					<ul class="dd-hidden">
 
-					<fieldset>
+					<li><div class="fieldset">
 						<h2 class="fs-title">Already A Member?</h2>
 					    	<div class="inputwrapper"> 
 						        <input type="text" class="form-acct" placeholder="Email Address">
@@ -47,7 +49,7 @@
 						    </div>
 						    <div class="submitButton" id="FirstSubmit">Submit</div>
 
-						 <hr size="3" color="black">
+						<!--  <hr size="3" color="black"> -->
 
 					    <h2 class="fs-title" id="first-fs-title">Create An Account</h2>
 					    	<div class="inputwrapper"> 
@@ -67,46 +69,46 @@
 						    </div>
 					    	
 					    	<div class="submitButton">Submit</div>
-					</fieldset>
+					</div></li>
 
 					</ul>
 				</li>
 
-				<li><div class="contact-bg dd-toggle">CONTACT</div>
+				<li><a class="contact-bg dd-toggle">CONTACT</a>
 			      	<ul class="dd-hidden">
-					<fieldset>
+					<li><div class="fieldset">
 					    <h2 class="fs-title">Question/Comment?</h2>
 					      <div class="inputwrapper"> 
-					        <label for="form-name">Name:</label>
+					        <div class="form-name">Name:</div>
 					        <input type="text" class="form" placeholder="Jane Doe">
 					      </div>
 
 					      <div class="inputwrapper">
-					        <label for="form-subject">Subject:</label>
+					        <div class="form-subject">Subject:</div>
 					        <input type="text" class="form" placeholder="A title for your comment">
 					      </div>
 
 					      <div class="inputwrapper">
-					        <label for="form-comment">Comment:</label>
+					        <div class="form-comment">Comment:</div>
 					        <textarea id="form-comment" placeholder="Please place comment here"></textarea>
 					      </div>
 
 						 <div class="submitButton">Submit</div>
 
 						<h3 class="bottomMessage">Or Call Us: 1-800-039-3939</h3>
-					</fieldset>
+					</div></li>
 
 					</ul>
 				</li>
 
 
 				<li>
-					<div class="fa fa-shopping-cart dd-toggle"></div>
+					<a class="fa fa-shopping-cart dd-toggle"></a>
 					<ul class="dd-hidden">
-						<fieldset>
+						<li><div class="fieldset">
 						    <h2 class="fs-title">Your Cart</h2>
 								<div class="item">
-								    <img class="first" src="img/MensGlasses/Leonard_Classics1.jpg">
+								    <img class="first" src="img/MensGlasses/Leonard_Classics1.jpg" alt="patterned sunglasses with royal blue lense">
 								    <ul class="second">
 								<li><h3>Leonard Classic</h3></li>
 								<li><p>Price:$100</p></li>
@@ -115,7 +117,7 @@
 								</div>
 
 								<div class="item">
-								    <img class="first" src="img/MensGlasses/Leonard_Classics5.jpg">
+								    <img class="first" src="img/MensGlasses/Leonard_Classics5.jpg" alt="pale brown and ivory sunglasses with gray brown lense">
 								    <ul class="second">
 								<li><h3>Leonard Classic</h3></li>
 								<li><p>Price:$100</p></li>
@@ -126,7 +128,7 @@
 								<div class="total">Total:$224.00</div>
 
 						   		<div class="checkoutButton">Checkout</div>
-						</fieldset>
+						</div></li>
 
 					</ul>
 					
@@ -193,6 +195,7 @@
 	<script src="js/prefixfree.min.js"></script> <!--Levona added for animation>-->
 	<script src="js/animatingpage.js"></script> <!--Levona added for animation>-->
 	<script src="js/jquery.smoothState.js.js"></script> <!--Levona added for animation>-->
+	<script src="js/animatedDD.js"></script>
 
 	</body>
 
