fixed nav so can type in fields

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 						    <div class="inputwrapper"> 
 						        <input type="password" class="form-acct" placeholder="Password">
 						    </div>
-						    <div class="submitButton" id="FirstSubmit">Submit</div>
-
-						<!--  <hr size="3" color="black"> -->
+						    <div class="submitButton" id="FirstSubmit">Log-In</div>
+							
+							<a href="" class="createAccnt">New? Create An Account</a>
 
 					    <h2 class="fs-title" id="first-fs-title">Create An Account</h2>
 					    	<div class="inputwrapper"> 
