--- a/mensStyle.html
+++ b/mensStyle.html
@@ -178,24 +178,79 @@
                     <div id="leftContent">
                          <!--ACTUAL CONTENT ON TOP-->
                         <div class="onTop">
-                            <div style="width:100%;height:60%;">
-                            <img src= "img/Leonard.jpg"alt="golden frame sunglasses">
+                            <div style="height:100%;width:100%;" class="eyeGlassContainer">
+                                <div style="width:100%;height:60%;" id="blueGlasses">
+                                <img src= "img/Leonard.jpg"alt="golden frame sunglasses">
+                                </div>
+                                <div id="clearGlasses" style="width:100%;height:60%;">
+                                <img src= "img/modal/clearLeonards.jpg"alt="Clear Leonards">
+                                </div>
+                                <div id="swatchesContainer">
+                                    <div id="blue"></div>
+                                    <div id="grey"></div>
+                                </div>
+                                <div class="productText">
+                                    <h2>Leonards</h2>
+                                    <h5>$500.000</h5>
+                                    <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
+                                </div>
+                                <div id="addBtn"><h3>ADD TO BAG</h3></div>
                             </div>
-                            <div id="swatchesContainer">
-                                <div></div>
-                                <div></div>
+                            <div id="reviewSection">
+                                <div id="productPreviewText">
+                                    <h2>LEONARDS</h2>
+                                    <h4>$400.00</h4>
+                                    <div id="rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-o"></i>
+                                    </div>
+                                    <div id="addBtn"><h3>ADD TO BAG</h3></div>
+                                </div>
+                                <div id="userContainer">
+                                    <div class="userProfiles">
+                                        <img src="img/uiFaces/kathleen.jpg" style="border-radius:50%;" />
+                                     </div>
+                                     <div>
+                                        <h5 class="userProfileText">SARAH WEAVER</h5>
+                                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
+                                        <div id="rating" class="userProfileText">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star-o"></i>
+                                        <i class="fa fa-star-o"></i>
+                                        </div>
+                                    </div>
+                                     <div class="userProfiles">
+                                        <img src="img/uiFaces/jasmine.jpg" style="border-radius:50%;" />
+                                     </div>
+                                     <div>
+                                        <h5 class="userProfileText">YVONNE QUETON</h5>
+                                        <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
+                                        <div id="rating" class="userProfileText">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div id="writeReviewSection">
+                                    <form>
+                                        <textarea placeholder="Write a review..."></textarea>
+                                        <input type="submit"></sumbit>
+                                    </form>
+                                </div>
                             </div>
-                            <div class="productText">
-                                <h2>Leonards</h2>
-                                <h5>$500.000</h5>
-                                <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make</p>
-                            </div>
-                            <div id="addBtn"><h3>ADD TO BAG</h3></div>
                         </div>
                   </div>
             </div>
             <div id="detailProductNav">
-                <div class="iconNav">
+                <div class="iconNav" id="viewProduct">
                     <i class="fa fa-search-plus fa-lg"></i></div>
                 <div class="iconNav" id="comments"><i class="fa fa-comments fa-lg"></i></div>
             </div>
