updated about, blog page

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/about.css">
+	<link rel="stylesheet" href="css/blog.css">
     <!--animates the tab menus-->
     <link rel="stylesheet" href="css/animate.css">
 	<title>Illesteva | Made in Italy.</title>
@@ -138,43 +138,21 @@
 
 			</ul>
 		</nav>
-		
-		<!-----------ABOUT CONTENT--------------->
-		<div class="section-about">
+
+		<!-----------PRESS CONTENT--------------->
+		<div class="section-press">
 		<div class="pageContainer">
 		<!--About Image on left-->
 			<div class="aboutImage">
 				<div class="about-image-wrapper">
 					<img class="about1" src="img/aboutBW.jpg" alt="4 tiled long blonde hair model posing with sunglasses making faces">
-					<img class="about2" src="img/aboutBW3.jpeg" alt="4 tiled long blonde hair model posing with sunglasses making faces">
+					<img class="about1" src="img/aboutBW3.jpeg" alt="4 tiled long blonde hair model posing with sunglasses making faces">
+					<img class="about2" src="img/about2.jpg" alt="4 tiled long blonde hair model posing with sunglasses making faces">
 				</div>   
 			</div>
-		<!--About Text on Right-->
-
-			<div class="aboutText">
-				<div class="about-text-wrapper">
-					<h1 class="aboutTitle">About Us</h1>
-					<div class="user-content">
-						<p>Founded in 2010, ILLESTEVA glasses are handmade in France and Italy, in concert with the world's leading manufactuers of luxury eyewear.</p>
-						<p class="AboutText">ILLESTEVA combines classic styles with contemporary Downtown New York City aesthetics, using materials like acetate and titanium with the design of each from.</p>
-						<p class="AboutText">ILLESTEVA has featured collaborative efforts with Jourdan Dunn, Lou Reed, Zac Posen, House of Waris, Band of Outsiders, and Dasha Zhukova. Most recently, ILLESTEVA has launched a line of hand-finished leather goods and umbrellas. ILLESTEVA backpacks and handbags are made with supple grained leather, combining natural, premium materials with urban functionality.</p>
-						<p class="AboutText">Celebrity fans include Beyonce, Rihanna, Lady Gaga, Katy Perry, Daniel Craig, Sienna Miller, Solange Knowles, Lena Dunham, Alexa Chung, Elton John, and Cara Delevingne.</p>
-					</div>   
-				</div>
-			</div>
-		
-			<!--About Text on Right-->
-
-			<div class="aboutText">
-				<div class="about-text-wrapper">
-					<h1 class="aboutTitle">Where To Find Us</h1>
-					<p>49 Prince St New York, NY USA</p>
-					<div id="googleMap"></div>
-				</div>
 			</div>
 		</div>
-		</div>	
-		<!-----------ABOUT END CONTENT--------------->
+		<!-----------PRESS CONTENT END--------------->
 		
 	<footer class="footer">
 		<div class="row">
@@ -203,8 +181,6 @@
      <script src="js/fixedNav.js"></script>
 	 
 	<script src="js/animatedDD.js"></script>
-	<script src="http://maps.googleapis.com/maps/api/js"></script>
-	<script src="js/googleMap.js"></script>
 
 	</body>
 
