fixing the buttons to navigate to diff styles

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -69,20 +69,16 @@
             <div class="row">
                 <div class="col-4of12 styleContainers" id="Leonards">
                     <img src="img/Leonard2.jpg" />
-                    <div class="seeMoreBtn"><h4>SEE MORE</h4></div>
+                    <div class="seeMoreBtn" id="leonardBtn"><h4>SEE MORE</h4></div>
                 </div>
-                <a href="">
                 <div class="col-4of12 styleContainers" id="Milan">
                     <img src="img/Milan2.jpg" />
-                    <div class="seeMoreBtn"><h4>SEE MORE</h4></div>
+                    <div class="seeMoreBtn" id="milanBtn"><h4>SEE MORE</h4></div>
                 </div>
-                </a>
-                 <a href="">
-                <div class="col-4of12 styleContainer" id="Wavers">
+                <div class="col-4of12 styleContainers" id="Wavers">
                    <img src="img/Rectangles2.jpg" />
-
+                   <div class="seeMoreBtn" id="waversBtn"><h4>SEE MORE</h4></div>
                 </div>
-                </a>
             </div>
         </div>
         <!--Glass Listings-->
@@ -126,11 +122,11 @@
                     </a>
                 </div>
             </section>
-            <section class="Leonards" style="width:100%;height:100%">
+            <section class="Milans" style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="leonards">
                         <img src="img/Leonard.jpg" />
-                        <h3>Leonard Classic</h3>
+                        <h3>Milans Classic</h3>
                         <h4>$500.00</h4>
                     </div>
                     <a href="">
@@ -160,6 +156,38 @@
                     <div class="col-4of12">
                         <img src="img/Milan.jpg" />
                         <h3>Milan Lounge</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    </a>
+                </div>
+            </section>
+            <section class="Wavers" style="width:100%;height:100%">
+                <div class="row">
+                    <div class="col-4of12" id="leonards">
+                        <img src="img/Leonard.jpg" />
+                        <h3>WAVERS Classic</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/Milan.jpg" />
+                        <h3>Milan Lounge</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    </a>
+                     <a href="">
+                    <div class="col-4of12">
+                        <img src="img/Rectangles.jpg" />
+                        <h3>Rectangles</h3>
+                        <h4>$500.00</h4>
+                    </div>
+                    </a>
+                </div>
+                <div class="row">
+                    <a href="">
+                    <div class="col-4of12">
+                        <img src="img/Leonard.jpg" />
+                        <h3>Leonard Classic</h3>
                         <h4>$500.00</h4>
                     </div>
                     </a>
