put a marker for where the store location is and fixed the styling

--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
 			</div>
 		<!--About Text on Right-->
 
-			<div class="aboutText">
+			<div class="aboutText"  id="aboutTextStuff">
 				<div class="about-text-wrapper">
 					<h1 class="aboutTitle">About Us</h1>
 					<div class="user-content">
