adding style to the Recommendation

--- a/mensStyle.html
+++ b/mensStyle.html
@@ -68,22 +68,40 @@
         <div class="container glassStyles">
             <div class="row">
                 <div class="col-4of12 styleContainers" id="Leonards">
-                    <img src="img/Leonard2.jpg" />
+                    <div class="styleContainer">
+                        <div class="styleInfoContainer">
+                            <h4>LEONARDS</h4>
+                            <p>Versatile Style</p>
+                        </div>
+                        <img src="img/winterIllesteva.jpg" />
+                    </div>
                     <div class="seeMoreBtn" id="leonardBtn"><h4>SEE MORE</h4></div>
                 </div>
                 <div class="col-4of12 styleContainers" id="Milan">
-                    <img src="img/Milan2.jpg" />
-                    <div class="seeMoreBtn" id="milanBtn"><h4>SEE MORE</h4></div>
+                    <div class="styleContainer">
+                            <div class="styleInfoContainer">
+                                <h4>MILANS</h4>
+                                <p>High Style</p>
+                            </div>
+                        <img src="img/casualIllesteva.jpg" />
+                    </div>
+                        <div class="seeMoreBtn" id="milanBtn"><h4>SEE MORE</h4></div>
                 </div>
                 <div class="col-4of12 styleContainers" id="Wavers">
-                   <img src="img/Rectangles2.jpg" />
-                   <div class="seeMoreBtn" id="waversBtn"><h4>SEE MORE</h4></div>
+                    <div class="styleContainer">
+                            <div class="styleInfoContainer">
+                                <h4>WAVERS</h4>
+                                <p>Casual Style</p>
+                            </div>
+                       <img src="img/boardingillesteva.jpg" />
+                    </div>
+                       <div class="seeMoreBtn" id="waversBtn"><h4>SEE MORE</h4></div>
                 </div>
             </div>
         </div>
         <!--Glass Listings-->
         <div class="container glassListing">
-            <section class="Leonards" style="width:100%;height:100%">
+            <section id="leonardsSection" style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="leonards">
                         <img src="img/Leonard.jpg" />
@@ -122,7 +140,7 @@
                     </a>
                 </div>
             </section>
-            <section class="Milans" style="width:100%;height:100%">
+            <section id="milansSection" style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="leonards">
                         <img src="img/Leonard.jpg" />
@@ -161,7 +179,7 @@
                     </a>
                 </div>
             </section>
-            <section class="Wavers" style="width:100%;height:100%">
+            <section id="waversSection" style="width:100%;height:100%">
                 <div class="row">
                     <div class="col-4of12" id="leonards">
                         <img src="img/Leonard.jpg" />
